newclay/test/Compiler/Propagation/Fail/BlockInStatementExpr1/main.clay
foo() = 1;
main() = ({ foo(); } 1);
